substantial round of fixes

--- a/content-menu-top.html
+++ b/content-menu-top.html
@@ -65,7 +65,7 @@
               <a href="#aa">Research</a>
               <ul>
                 <li class="current"><a href="/our_work/research.html">By Project</a></li>
-                <li><a href="/our_work/topic.html">By Topic</a></li>
+                <li><a href="/our_work/research-topic.html">By Topic</a></li>
                 <li><a href="/our_work/yda.html">Youth Data Archive (YDA)</a></li>
               </ul>
             </li>
@@ -73,9 +73,9 @@
               <a href="/our_work/capacity_building.html">Leadership Development & Capacity Building</a>
             </li>
             <li>
-              <a href="/our_work/allwork.html">Browse All Work</a>
+              <a href="#">Browse All Work</a>
               <ul>
-                <li class="current"><a href="/our_work/research.html">By Project</a></li>
+                <li class="current"><a href="/our_work/allwork.html">By Project</a></li>
                 <li><a href="/our_work/topic.html">By Topic</a></li>
               </ul>
             </li>
