--- a/our_work/content-allwork.html
+++ b/our_work/content-allwork.html
@@ -73,7 +73,7 @@
            <h1 class="content-text-header">S</h1>
 		<ul style="list-style: none;">
 			<li><a href="saludamerica.html">Salud America</a></li>			
-			<li><a href="healthyschools.html">San Mateo County Healthy Schools</a></li>
+			<li><a href="healthyschools.html">Sequoia Healthcare District - Healthy Schools Initiative</a></li>
 			<li><a href="bts.html">San Francisco Bridge to Success</a></li>
 			<li><a href="research_consortium.html">San Francisco Research Consortium</a> </li>
 			<li><a href="strc.html">Sequoia High School Teen Resource Center</a></li>
