--- a/our_work/content-community_schools_eval.html
+++ b/our_work/content-community_schools_eval.html
@@ -11,13 +11,11 @@
  <h1 class="content-text-header">Publication</h1><br>
 
 <ul>
-<li>Examining Student Outcomes Across Programs in Redwood City Community Schools (<a href="/resources/publications/JGC_SS_RWCCommunitySchools2011.pdf" class="link-no-underline">Snapshot</a>)</li>
+<li>Examining Student Outcomes Across Programs in Redwood City Community Schools (<a href="/resources/publications/CSIssueBrief.pdf">Issue Brief</a> & <a href="/resources/publications/JGC_SS_RWCCommunitySchools2011.pdf" class="link-no-underline">Snapshot</a>)</li>
 </ul>
     
     </div> <!--end right side box div-->
     </aside>
-
-
 
 
 
