--- a/our_work/content-foster_youth.html
+++ b/our_work/content-foster_youth.html
@@ -22,6 +22,7 @@
    <h1 class="content-text-header">Publications</h1><br>
 <ul>
 <li>Educational Outcomes for Court-Dependent Youth in San Mateo County (<a href="/resources/publications/JGC_IB_CourtDependentYouth2009.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/JGC_SS_CourtDependentYouth2009.pdf" class="link-no-underline">Snapshot</a>) </li>
+<li>Fostering Educational Success: Legislation and Policies to Promote Positive Educational Experiences for California's Foster Youth (<a href="/resources/policy_fact_sheets/Castrechini_PFS_Fostering Educational Success Legislation and Policies to Promote Positive Educational Experiences for California's Foster Youth_2009_Final.pdf">Policy Fact Sheet</a>)</li>
 </ul>
     </div> <!--end right side box div-->
     </aside>
