--- a/our_work/content-healthyschools.html
+++ b/our_work/content-healthyschools.html
@@ -11,7 +11,11 @@
 
       <h1 class="content-text-header">Partner Organizations</h1>
 <ul>
+<li>Belmont-Redwood Shores School District</li>
+<li>Redwood City School District</li>
+<li>San Carlos School District</li>
 <li>Sequoia Health Care District</li>
+<li>Sequoia Union High School District</li>
 </ul>
     
     </div> <!--end right side box div-->
