--- a/our_work/content-mapping.html
+++ b/our_work/content-mapping.html
@@ -25,6 +25,7 @@
 <br>
 <ul>
 <li>Mapping Out-of-School Time Resources for East Palo Alto and Belle Haven Youth (<a href="/resources/publications/JGC_IB_OSTResourcesEPA2010.pdf" class="link-no-underline">Issue Brief</a> & <a href="/resources/publications/JGC_SS_OSTResourcesEPA2010.pdf" class="link-no-underline">Snapshot</a>)</li>
+<li>Youth Resource Mapping: Partnering with Service Providers and Youth to Understand the Supply and Demand for Youth Services in a Local Context (<a href="/resources/journals/Castrechini_JA_Youth Resource Mapping Partnering with Service Providers and Youth to Understand the Supply and Demand for Youth Services in a Local Context_2011_Final.pdf">Journal Article<span class="content-italic">)</a></li>
 </ul>
     </div> <!--end right side box div-->
     </aside>
