--- a/our_work/content-research.html
+++ b/our_work/content-research.html
@@ -4,7 +4,7 @@
 
 
         <div class="jgc-content-feature-item-left">
-<h1 class="title-page-header-big">Our Work, by Research Project</h1><br>
+<h1 class="title-page-header-big">Our Research, by Project</h1><br>
 
 	<div class="column-outer">
 	<div class="column-inner-box">
@@ -69,7 +69,7 @@
            <h1 class="content-text-header">S</h1>
 		<ul style="list-style: none;">
 			<li><a href="saludamerica.html">Salud America</a></li>			
-			<li><a href="healthyschools.html">San Mateo County Healthy Schools</a></li>
+			<li><a href="healthyschools.html">Sequoia Healthcare District - Healthy Schools Initiative</a></li>
 			<li><a href="bts.html">San Francisco Bridge to Success</a></li>
 			<li><a href="strc.html">Sequoia High School Teen Resource Center</a></li>
 			<li><a href="soccer">Soccer for Success</a></li>
