--- a/our_work/content-topic.html
+++ b/our_work/content-topic.html
@@ -4,7 +4,7 @@
 
         <div class="jgc-content-feature-item-left">
                                                                       
-                 <h1 class="title-page-header-big">Our Work, by Topic</h1>
+                 <h1 class="title-page-header-big">All Work, by Topic</h1>
 <br>                                               
                                              
 <span class="content-bold">College Readiness</span>
@@ -35,7 +35,7 @@
 <li><a href="/our_work/playworks.html">Playworks II Randomized Control Trial</a></li>	
 <li><a href="/our_work/prevention_partnership.html">Redwood City-North Fair Oaks Prevention Partnership</a></li>	
 <li><a href="/our_work/saludamerica.html">Salud America</a></li>	
-<li><a href="/our_work/healthyschools.html">San Mateo County Healthy Schools Initiative</a></li>	
+<li><a href="/our_work/healthyschools.html">Sequoia Healthcare District - Healthy Schools Initiative</a></li>	
 <li><a href="/our_work/strc.html">Sequoia High School Teen Resource Center</a></li>	
 <li><a href="/our_work/soccer.html">Soccer for Success</a></li>	
 </ul>
