--- a/our_work/content-yell.html
+++ b/our_work/content-yell.html
@@ -20,7 +20,7 @@
 <br>
 <li>Integrating Technology into Community Youth Research (<a href="/resources/publications/JGC_IB_TechnologyinCommunityYouthResearch2004.pdf" class="link-no-underline">Issue Brief</a>)</li>
 <br>
-<li>Youth Empowerment the Contributions and Challenges of Youth-Led Research in a High-Poverty, Urban Community )<a href="/resources/publications/JGC_IB_ContributionsChallengesYouthLedResearch2003.pdf" class="link-no-underline">Issue Brief</a>)</li>
+<li>Youth Empowerment the Contributions and Challenges of Youth-Led Research in a High-Poverty, Urban Community (<a href="/resources/publications/JGC_IB_ContributionsChallengesYouthLedResearch2003.pdf" class="link-no-underline">Issue Brief</a>)</li>
 <br>
 <li>Creating Community change: Challenges and Tensions in Community Youth Research (<a href="/resources/publications/JGC_IB_CommunityYouthResearch2002.pdf" class="link-no-underline">Issue Brief</a>)</li>
 <br>
