--- a/our_work/content-youth_art_music.html
+++ b/our_work/content-youth_art_music.html
@@ -37,9 +37,9 @@
 
 <li>An assessment of barriers and opportunities for creating and sustaining a Youth Art and Music Center in EPA.</li>
 
-<li>Engaged community “champions” to help move the project forward; and</li>
+<li>Engaged community “champions” to help move the project forward; </li>
 
-<li>A set of recommendations for planning a thriving, sustainable Youth Art and Music Center in EPA, including the financial model, program features, partnership structure, and ongoing community engagement strategies; </li>
+<li>A set of recommendations for planning a thriving, sustainable Youth Art and Music Center in EPA, including the financial model, program features, partnership structure, and ongoing community engagement strategies; and</li>
 
 <li>Agreement with project funders, community decision makers and champions regarding next steps in project funding and development. </li>
 
