--- a/resources/content-issue-briefs.html
+++ b/resources/content-issue-briefs.html
@@ -9,6 +9,7 @@
 <span class="content-bold">2011</span>
 <ul style="list-style: none;">
 <li><a href="/resources/publications/JGC_IB_SFUSDEarlyWarningIndicators2011.pdf" class="link-no-underline">Developing Early Warning Indicators for the San Francisco Unified School District</a></li>
+<li><a href="/resources/publications/CSIssueBrief.pdf" class="link-no-underline">Examining Student Outcomes Across Programs in Redwood City Community Schools</a></li>
 <li><a href="/resources/publications/JGC_IB_SFUSDMathArticulation2011.pdf" class="link-no-underline">Math Articulation Between the San Francisco Unified School District and the City College of San Francisco</a></li>
 <li><a href="/resources/publications/JGC_IB_SFUSDPostSecondaryTransition2011.pdf" class="link-no-underline">Secondary to Postsecondary Transitions for Youth in San Francisco Unified School District</a></li>
 <li><a href="/resources/publications/JGC_IB_AfterSchoolPhysicalFitness2011.pdf" class="link-no-underline">Community-Based After School Programs and Youth Physical Fitness</a></li>
@@ -24,7 +25,7 @@
 <li><a href="/resources/publications/JGC_IB_AlternativeSchoolStudentsTransition2010.pdf" class="link-no-underline">The Academic Progress of Alternative School Students Transitioning into Comprehensive High Schools</a></li>
 <li><a href="/resources/publications/JGC_IB_StateLocalDataTrackingPostsecondary2010.pdf" class="link-no-underline">State and Local Data Infrastructure for Tracking Secondary to Postsecondary Educational Outcomes</a></li>
 <li><a href="/resources/publications/JGC_IB_LinkedSummerPrograms2011.pdf" class="link-no-underline">Linked Summer Programs for Youth: Opportunities, Challenges and Innovations</a></li>
-<li><a href="/resources/publications/JGC_IB_Motivation2010.pdf">Practices that Promote Middle School Students’
+<li><a href="/resources/publications/JGC_IB_Motivation2010.pdf" class="link-no-underline">Practices that Promote Middle School Students’
 Motivation and Achievement</a></li>
 
 
