--- a/about_jgc/content-stanford.html
+++ b/about_jgc/content-stanford.html
@@ -26,7 +26,7 @@
           <p>We provide and facilitate student internships in collaboration with programs such as the <a href="http://urbanstudies.stanford.edu/" target="_blank">Urban Studies Program</a>, the <a href="http://prevention.stanford.edu/" target="_blank">Prevention Research Center</a>, <a href="http://studentaffairs.stanford.edu/haas" target="_blank">the Haas Center for Public Service</a> and the Stanford Undergraduate Research Programs (SURP). JGC also prepares students to conduct community-based research as part of honors theses, research fellowships and dissertations.</p>
           <br>
           <span class="content-bold">Partnering in to Connect Research and Practice</span> 
-          <p>JGC staff and faculty partner with others in the <a href="http://ed.stanford.edu/" target="_blank">School of Education</a>, <a href="stanford school of medicine" target="_blank">School of Medicine</a>, and <a href="http://studentaffairs.stanford.edu/haas" target="_blank">Haas Center for Public Service</a> in joint research and community-based partnerships. Just as the JGC seeks to link efforts and resources in community settings, we also strive to do this with and among our University colleagues.</p>
+          <p>JGC staff and faculty partner with others in the <a href="http://ed.stanford.edu/" target="_blank">School of Education</a>, <a href="http://med.stanford.edu/" target="_blank">School of Medicine</a>, and <a href="http://studentaffairs.stanford.edu/haas" target="_blank">Haas Center for Public Service</a> in joint research and community-based partnerships. Just as the JGC seeks to link efforts and resources in community settings, we also strive to do this with and among our University colleagues.</p>
           <br> 
 
          </div>
