--- a/resources/content-links.html
+++ b/resources/content-links.html
@@ -33,9 +33,9 @@
 <a href="http://www.communityschools.org/">Coalition for Community Schools</a>
 <p>The Coalition for Community Schools brings together local, state and national organizations that represent individuals and groups engaged in creating and sustaining community schools.</p>
 <br>
-<a href="http://www.springerlink.com/content/61360wm30t57230u/">Community Youth Development Professionals: Providing the Necessary <p>Supports in the United States (Child and Youth Care Forum, Volume 35, Number 2, pp. 101-158) 
-Lynne M. Borden, University of Arizaon & Danile F. Perkins, The Pennsylvania State University (April 2006)
-This paper explores the educational opportunities available to community youth development professionals in the United States.</p>
+<a href="http://www.springerlink.com/content/61360wm30t57230u/">Community Youth Development Professionals: Providing the Necessary Supports in the United States (Child and Youth Care Forum, Volume 35, Number 2, pp. 101-158) 
+Lynne M. Borden, University of Arizona & Daniel F. Perkins, The Pennsylvania State University (April 2006)</a>
+<p>This paper explores the educational opportunities available to community youth development professionals in the United States.</p>
 <br>
 <a href="http://findyouthinfo.gov/">Find Youth Info</a> 
 <p>Connection to federal resources that support children and youth during out-of-school hours.</p>
@@ -74,10 +74,10 @@ This paper explores the educational opportunities available to community youth d
 <br>
 <a href="http://www.search-institute.org/">Search Institute </a>
 <p>The mission of Search Institute is to provide leadership, knowledge, and resources to promote healthy children, youth, and communities.</p>
-
+<br>
 <a href="http://www.urbanhealth.org/">Urban Health Initiative </a>
-UHI's purpose is to determine whether a concerted, collaborative effort can bring about region-wide improvements in multiple measures of youth health and safety. They are focusing their ten-year effort on Oakland and four other U.S. cities. 
-
+<p>UHI's purpose is to determine whether a concerted, collaborative effort can bring about region-wide improvements in multiple measures of youth health and safety. They are focusing their ten-year effort on Oakland and four other U.S. cities.</p> 
+<br>
 <a href="http://www.whatkidscando.org/">What Kids Can Do</a>
 <p>What Kids Can Do (WKCD) connects the previously separate fields of school reform, youth development, community development, and service learning. Working at the intersection of journalism, research, and advocacy, WKCD finds and documents the best that young people are doing around the country. </p>
 <br>
