First attempt to add Nancys news and events section

--- a/content-menu-top.html
+++ b/content-menu-top.html
@@ -104,6 +104,10 @@
         </li>
         <li>
           <a href="#ab">News & Events</a>
+            <ul>
+              <li class="current"><a href="/news/news.html">Latest & Upcoming</a></li>
+              <li><a href="/news/media.html">Media Inquiries</a></li>
+            </ul>
         </li>
       </ul>
       <span id="donate-button">
