latest jquery minmized, wired up search, integrated home page to use SSI

--- a/content-head.html
+++ b/content-head.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" media="handheld" href="css/handheld.css?v=2">  -->
  
   <!-- All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects -->
-  <script src="/js/libs/jquery-1.5.1.js"></script>
+  <script src="/js/libs/jquery-latest.min.js"></script>
   <script src="/js/libs/hoverIntent.js"></script>
   <script src="/js/libs/superfish.js"></script>
   <script type="text/javascript">
