--- a/our_work/content-allwork.html
+++ b/our_work/content-allwork.html
@@ -4,7 +4,7 @@
 
 
         <div class="jgc-content-feature-item-left">
-<h1 class="title-page-header-big">Browse All Work, by Project</h1><br>
+<h1 class="title-page-header-big">All Work, by Project</h1><br>
 	<div class="column-outer">
 	<div class="column-inner-box">
 
