--- a/our_work/content-research-topic.html
+++ b/our_work/content-research-topic.html
@@ -5,7 +5,7 @@
         <div class="jgc-content-feature-item-left">
        
 
-<h1 class="title-page-header-big">All Work, by Topic</h1>
+<h1 class="title-page-header-big">Research, by Topic</h1>
 <br>                                               
                                              
 <span class="content-bold">College Readiness</span>
