--- a/our_work/content-research.html
+++ b/our_work/content-research.html
@@ -4,7 +4,7 @@
 
 
         <div class="jgc-content-feature-item-left">
-<h1 class="title-page-header-big">Our Research, by Project</h1><br>
+<h1 class="title-page-header-big">Research, by Project</h1><br>
 
 	<div class="column-outer">
 	<div class="column-inner-box">
@@ -16,7 +16,8 @@
 		<ul style="list-style: none;">
 			<li><a href="alt-ed.html">California Alternative Education Research Project</a></li>
 			<li><a href="cris.html">College Readiness Indicators Systems (CRIS)</a></li>
-			<li><a href="acad_soc_emo.html">Connecting Academic with Social and Emotional Development</a></li>
+			<li><a href="cydi.html">Community Youth Development Initiative (CYDI)</a><li>
+			<li><a href="acad_soc_emo_devt.html">Connecting Academic with Social and Emotional Development</a></li>
 		</ul><br>
 	   <hr class="short-rule">
 	   
@@ -37,7 +38,7 @@
 
            <h1 class="content-text-header">O</h1>
 		<ul style="list-style: none;">
-			<li>Oakland PASS 2 Program Evaluation</a></li>
+			<li><a href="okf.html">Oakland PASS 2 Program Evaluation</a></li>
 		</ul><br>
 <hr class="short-rule">
 
