--- a/resources/content-reports.html
+++ b/resources/content-reports.html
@@ -9,7 +9,7 @@
 <br>
 <a href="http://www.rwjf.org/pr/product.jsp?id=63651">Playworks Implementation in Eight Bay Area Elementary Schools </a>
 <br>
-<a href="http://www.rwjf.org/pr/product.jsp?id=63651">Playworks: Supporting Play and Physical Activity in Low-Income Elementary SchoolsReport)</a>
+<a href="http://www.rwjf.org/pr/product.jsp?id=63651">Playworks: Supporting Play and Physical Activity in Low-Income Elementary SchoolsReport</a>
          </div>
 
   
