--- a/about_jgc/content-mission.html
+++ b/about_jgc/content-mission.html
@@ -12,12 +12,12 @@
 		<br>
 	
    	   <h1 class="content-text-header">Principles</h1>
-		<p>Our work is rooted in the principles of community youth development: a community only prospers when its young people 		prosper, and young people only flourish in a flourishing community. Specifically, the Center believes in encouraging and 			empowering community partners to drive the process; bridging the gap between research, practice and policy; generating 			actionable research; providing opportunities for undergraduate and graduate students to contribute to research projects; 			and ultimately seeking to inform both the community at hand and the broader field of critical findings from our work.</p>
+		<p>Our work is rooted in the principles of community youth development: a community only prospers when its young people 		prosper, and young people only flourish in a flourishing community.    Specifically, the Center believes in working in deep partnership with communities; bridging the gap between research, practice and policy; generating actionable research; providing opportunities for undergraduate and graduate students to contribute to research projects; and ultimately seeking to inform both the community at hand and the broader field about critical findings from our work.</p>
 		<br>
 
         </div>
 
       </div>
-        
+     
 
 
