--- a/content-footer.html
+++ b/content-footer.html
@@ -1,17 +1,17 @@
                  <!--end of features, now footer-->
                  <br clear="all">
-                  
+                 <footer>
                  <div class="footer_top">
                    <ul class="plugins">
-                     <li class="plugin">
-                       <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like href="jgc.stanford.edu" layout="button_count" show_faces="false" width="90" font="" send="true" class="fb-like"></fb:like>
-                     </li>
                      <li class=plugin>
                         <a href="http://www.twitter.com/gardnercenter">
                           <img src="/images/index/follow_on_twitter.png"></a>
                      </li>
                      <li class=plugin>
                         <g:plusone size="medium" annotation="none"></g:plusone>
+                     </li>
+                     <li class="plugin">
+                       <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like href="jgc.stanford.edu" layout="standard" show_faces="false" width="450" font="" send="true" class="fb-like"></fb:like>
                      </li>
                    </ul>
                    <ul class="piped_right">
@@ -29,9 +29,6 @@
                      <li class="footer"><a href="https://pgnet22.stanford.edu/giving/part/common/privacy.html" target="_blank" class="footer">Privacy policy</a></li>
                    </ul>
                 </div>
-      <footer>
-
-      </footer>
-
+                </footer>
     
   </div> <!--! end of #container -->
