--- a/resources/content-presentations.html
+++ b/resources/content-presentations.html
@@ -11,8 +11,8 @@
 <p><a href="/resources/presentations/Session 3 PPT.pdf">Community School Resource Initiative, Beyond Services:
 A Whole School Strategy for Sustainability</a>, presented by Sebastian Castrechini in May 2011</p>
 <br>
-<p><a href="/resources/presentations/Gurantz Bridge to Success SFUSD - April 2011.pptx">Bridge to Success: Using Data
-to Improve Student Success Early Predictors of High School Graduation, Postsecondary Attendance, and Postsecondary Completion</a>, presented by Oded Gurantz in April 2011</p>
+<p><a href="/resources/presentations/110927_BtS_SDP_presentation_FINAL_NoNotes.pptx">Bridge to Success: Using Data
+to Improve Student Success Early Predictors of High School Graduation, Postsecondary Attendance, and Postsecondary Completion</a>, presented by Oded Gurantz in September 2011</p>
 <br>
 <p><a href="/resources/presentations/SUHSD board presentation Mar 2009 v3.ppt">Physical Fitness and Academic Performance Among Redwood City Youth: Is There a Link?</a>, presented by Sebastian Castrechini in March 2009</p>
 
