Another substantial round of additions, edits and corrections

--- a/about_jgc/team_bios/content-bernadette.html
+++ b/about_jgc/team_bios/content-bernadette.html
@@ -6,7 +6,10 @@
            <h1 class="content-text-header">Bernadette Thomas Butler</h1>
 	   <span class="content-bold">Project Coordinator</span><br>
 <br>
-<p>Bernadette Thomas Butler has been a Project Coordinator at the John W. Gardner Center since August of 2010 and comes with several years of experience working with San Francisco Bay Area youth and their families. Bernadette works principally on the Community Schools Resource Initiative, the East Palo Alto-Belle Haven Community Mapping and Youth-Led Feasibility Study, and the Complementary Indicators of Youth Development Project.</p>
+<p>
+<img class="bio-std" src="/images/team/BThomas_sm.jpg">
+Bernadette Thomas Butler has been a Project Coordinator at the John W. Gardner Center since August of 2010 and comes with several years of experience working with San Francisco Bay Area youth and their families. Bernadette works principally on the Community Schools Resource Initiative, the East Palo Alto-Belle Haven Community Mapping and Youth-Led Feasibility Study, and the Complementary Indicators of Youth Development Project.
+</p>
 <br>
 <p>Prior to joining the John W. Gardner Center, Bernadette worked in school, after-school, and summer learning settings as a direct service provider. She began her formal career in education as a middle school teacher in East Palo Alto in 2002. From there, Bernadette directed the academic and college counseling component of an after-school program focused on supporting East Palo Alto, east Menlo Park, and Redwood City high school students to be college eligible and college ready. Beginning in 2007, Bernadette held administrative positions, serving as the site administrator for a summer learning program in Oakland, co-leading a public charter school in East Palo Alto and serving as one of the Ravenswood City School Districts Positive Behavior Support Specialists. Bernadette graduated from Georgetown University in 2002 with a Bachelors Degree in Government.</p>
          </div>
