--- a/about_jgc/team_bios/content-kara.html
+++ b/about_jgc/team_bios/content-kara.html
@@ -6,9 +6,13 @@
           <h1 class="content-text-header">Kara Dukakis</h1>
 <span class="content-bold">Associate Director</span><br>
 <br>
-<p>Kara Dukakis, Associate Director, joined the staff of the Gardner Center in October, 2007. In that role, she oversees the planning and general functioning of the YDA initiative, with particular emphasis on community engagement. Prior to that, she was an independent Policy and Planning Consultant researching, writing and developing trainings in the areas of early care and education, child welfare and children's mental health. In 2006, Kara was appointed to the San Francisco First 5 Commission, for which she served as Chair for two years before completing her term in 2009.</p>
+<p>
+<img class="bio-std" src="/images/team/KDukakis.jpg">
+Kara Dukakis, Associate Director, joined the staff of the Gardner Center in October, 2007. In that role, she oversees the planning and general functioning of the YDA initiative, with particular emphasis on community engagement. Prior to that, she was an independent Policy and Planning Consultant researching, writing and developing trainings in the areas of early care and education, child welfare and children's mental health. In 2006, Kara was appointed to the San Francisco First 5 Commission, for which she served as Chair for two years before completing her term in 2009.
+</p>
 <br>
 <p>Before working as a consultant, Kara was the Associate Director for Early Care and Education at Children Now, where she led the agency's work on universal preschool efforts and state budget advocacy, and authored several Children Now publications. Kara previously worked as the Director of Family Services at The Children's Council of San Francisco, performing executive agency planning activities and chairing the agency's advocacy committee. Prior to that, Kara served as a Psychiatric Social Worker for San Francisco's Department of Public Health, Foster Care Mental Health Program (FCMHP), where she conducted mental health assessments and long-term individual therapy in English and Spanish for youth in foster care, the majority of whom were low-income with multiple health and social service needs. Kara received her Bachelor's Degree from Brown University and a Master's in Social Welfare from UC Berkeley, and has a license in clinical social work (LCSW).</p> 
          </div>
+       </div>
 
         
