--- a/about_jgc/team_bios/content-milbrey.html
+++ b/about_jgc/team_bios/content-milbrey.html
@@ -7,14 +7,17 @@
 <span class="content-bold">Founding Director</span><br>
 <span class="content-italic">David Jacks Professor of Education and Public Policy, Stanford University</span><br>
 <br>
-<p>Milbrey McLaughlin is the Founding Director of the John W. Gardner Center for
+<p>
+<img class="bio-std" src="/images/team/milbrey.jpg">
+Milbrey McLaughlin is the Founding Director of the John W. Gardner Center for
 Youth and Their Communities at Stanford University. She is also the Co-Director of
 the Center for Research on the Context of Teaching, an interdisciplinary research
 center engaged in analyses of how teaching and learning are shaped by teachers’
 organizational, institutional, and social-cultural contexts. As the David Jacks
 Professor of Education and Public Policy at Stanford University’s School of
 Education, Dr. McLaughlin’s research combines studies of K-12 education policy in the U.S and work on the
-broad question of community-school collaboration to support youth development.</p>
+broad question of community-school collaboration to support youth development.
+</p>
 <br>
 <p>At Stanford, Dr. McLaughlin teaches Urban Youth and Their Institutions; Best Practices in Youth
 Development; Policy Analysis in Education; and Macro and Micro Issues in Policy Analysis. She has
