--- a/content-menu-top.html
+++ b/content-menu-top.html
@@ -105,8 +105,7 @@
         <li>
           <a href="#ab">News & Events</a>
             <ul>
-              <li class="current"><a href="/news/news.html">Latest & Upcoming</a></li>
-              <li><a href="/news/media.html">Media Inquiries</a></li>
+              <li class="current"><a href="/news/news.html">News & Events</a></li>
             </ul>
         </li>
       </ul>
