--- a/our_work/content-capacity_building.html
+++ b/our_work/content-capacity_building.html
@@ -15,7 +15,7 @@
 
 <li><a href="mapping.html">East Palo  Alto Youth Resource Mapping</a></li>
 
-<li><a href="youth_art_music.html">East Palo Alto Youth Art & Music Center</a></li>
+<li><a href="youth_art_music.html">East Palo Alto Arts, Music and Cultural Center</a></li>
 
 <li><a href="prevention_partnership.html">Redwood City-North Fair Oaks Prevention Partnership</a></li>
 
@@ -42,7 +42,7 @@
 <br>
 <ol> 
 <li>Cross-sector planning and community development (<a href="cydi.html">CYDI</a>)</li>
-<li>Youth led research and youth leadership development (<a href="yell.html">YELL</a>, <a href="youth_art_music.html">EPA Youth Art & Music Center</a>)</li>
+<li>Youth led research and youth leadership development (<a href="cydi.html">CYDI</a>, <a href="yell.html">YELL</a>, <a href="youth_art_music.html">EPA Arts, Music and Cultural Center</a>)</li>
 <li>Youth–adult partnerships to meet community-identified goals or outcomes (<a href="prevention_partnership.html">Prevention Partnership</a>, <a href="cydi.html">CYDI</a>)</li>
 <li>Stanford student support and training (internships, positions, course connections)</li>
 </ol> 
