--- a/our_work/content-fitness_achievement.html
+++ b/our_work/content-fitness_achievement.html
@@ -13,6 +13,8 @@
 
     <ul>
 <li>Redwood City School District</li>
+<li>San Mateo County Health Department</li>
+<li>Sequoia High School District</li> 
 </ul>
     </div> <!--end right side box div-->
     </aside>
