--- a/our_work/content-mapping.html
+++ b/our_work/content-mapping.html
@@ -30,57 +30,19 @@
     </div> <!--end right side box div-->
     </aside>
 
-<span class="content-bold">Introduction</span> 
+<p>In 2009, representatives from five community-based organizations in East Palo Alto and Belle Haven identified a need to centralize information on the wide array of programs and services available to youth in the community.  This group of community leaders partnered with the JGC to collect data and use the data to understand gaps or duplication in available services as well as factors that keep youth from accessing the available opportunities.  The JGC created a map that included information on program content, times, target audiences, and costs.  The JGC also engaged youth researchers who surveyed their peers to understand where youth spend their time, what keeps them from accessing programs, and what types of programs they want and need.  The project also included GIS-based analysis of transit lines, crime data, and program locations to understand how these logistical factors could potentially hinder or facilitate youth access to programs.</p>
+
+ <br>
+
+Results of this project include:<br>
 <br>
-<p> Representatives from the Built to Last Collaborative, the Community Development Institute, For Youth By Youth, Nuestra Casa, OneEPA, and Youth Community Services, have joined together with the John W. Gardner Center for Youth and Their Communities (JGC) at Stanford University to map the out-of-school time (OST) opportunities available to East Palo Alto youth.  This project will bring together information on the landscape of OST opportunities available for EPA youth, with the goal of increasing access to and awareness of services for youth and providers.  </p>
+<ul>
+<li>     An online program mapping tool that allows users to search for programs by time, content, location, or age range;</li>
 
-<br>
-<span class="content-bold">Project Outline </span> 
-<br>
-<p>The JGC will work with community partners to collect of three types of data to be used for mapping: </p>
+<li>      A youth research project that introduced community members to the mapping tool and gathered feedback on how to improve usability of the tool; and</li>
 
-<ol>
-
-<li>Interviews with program directions to learn about programs, including types of programming, location, times, and target audiences, to be collected by surveys of practitioners </li>
-
-<li>Student surveys that paints a picture of where students are throughout out-of-school time </li>
-
-<li>Program attendance data, to be provided by each program</li>
-
-</ol>
-
-<br>
-
- 
-
-<p> Using these data, the JGC will create a map of OST opportunities for youth that shows the geographic spread of services and participants throughout the community and an accompanying analysis that explores the opportunities, gaps, and barriers to participation for youth.  It could also be a useful tool that partners can utilize in grant writing and fund raising. </p>
-
-<br>
-
-<p> After the analysis is completed, partners will review the results and decide how they can implement the findings.  Two anticipated directions are that the initial analysis will lead to shorter-term policy and programmatic changes and that it will also lead to ongoing data gathering about the community and its youth at a deeper, qualitative level to further inform those changes. </p>
-
-<br>
-
- 
-
-<p> <span class="content-bold">Roles of Partners and Potential Benefits</span> </p>
-
-<p> The quality of this work will depend on getting a broad coalition of participating programs so that we have a true picture of the OST landscape.  While we want to minimize the time burden placed on partners, we will be asking participating programs to cooperate by providing their attendance records and by participating in a short interview about their program.  </p>
-
-<br>
-
-<p> In return, programs will get an analysis that will provide important information that partners can use to inform programmatic decisions.  In addition, the JGC will help programs as needed to build their data collecting capacity by helping them to develop a tool to capture participation data. </p>
-
-<br>
-
- 
-
-<span class="content-bold">Data Sharing and Dissemination Practices </span> 
-
-<br>
-
-<p> This project is not an evaluation of any particular program and will only be used as a tool for partners to think about opportunities across the community.  JGC researchers take every precaution to ensure that the data provided by partners to the JGC is not misused.  First, the JGC never distributes any report without all partners having reviewed the analysis and consented to the report being made public.  Also, reports produced never include data reported in a manner that permits identification of any individual and is never used to contact or identify individuals.  In addition, data is housed in a secure data center that meets the highest industry standards for data security and confidentiality. </p>
-
+<li>      Use of the data and analysis findings in program and community planning discussions.</li>
+</ul>
          </div>
 
        
