--- a/our_work/content-youth_art_music.html
+++ b/our_work/content-youth_art_music.html
@@ -3,7 +3,8 @@
       <div id="jgc-content-features">
 
         <div class="jgc-content-feature-item-left">
-           <h1 class="title-page-header-big">East Palo Alto Youth Art and Music Center: Community Assessment and Engagement </h1>
+           <h1 class="title-page-header-big">East Palo Alto
+Arts, Music and Cultural Center: Community Assessment and Engagement </h1>
 
   <aside>
     <div class="right-side-box">
@@ -11,39 +12,16 @@
       <h1 class="content-text-header">Partner Organizations</h1>
 <ul>
 <li>Live in Peace</li>
+<li>The Mural Music and Art Project</li>
 </ul>
     
     </div> <!--end right side box div-->
     </aside>
 
 
-<br>
 
-<p>In 2010, ten Youth Arts Researchers (YARs) worked with the John W. Gardner Center (JGC) to determine if members of the East Palo Alto community wanted and needed a new Youth Art and Music Center.  The YARs were between 15 and 23 years of age, all from the East Palo Alto community. Two community-based organizations - Live in Peace (LIP) and the Mural Music and Arts Project (MMAP) - identified the participating youth, who each received a stipend for their work, along with training in research design and implementation. The youth interviewed 95 people, conducted site visits to other centers, and synthesized research findings and recommendations. The findings indicated that such a center would be strongly supported by residents and that it would be an asset to the East Palo Alto community. </p>
 
-<br>
-
-<p>Youth and adult partners are currently engaged in the second phase of work: discussing initial findings with youth, policy makers and social leaders, with the aim of gathering additional guidance and identifying key partnerships, design principles, and next steps for forward movement. </p>  
-
-<br>
-
-<p>Specifically, the current youth and adult team aims to develop:</p>
-
-<br>
-
- 
-
-<ol>
-
-<li>An assessment of barriers and opportunities for creating and sustaining a Youth Art and Music Center in EPA.</li>
-
-<li>Engaged community “champions” to help move the project forward; </li>
-
-<li>A set of recommendations for planning a thriving, sustainable Youth Art and Music Center in EPA, including the financial model, program features, partnership structure, and ongoing community engagement strategies; and</li>
-
-<li>Agreement with project funders, community decision makers and champions regarding next steps in project funding and development. </li>
-
-</ol>
+<p>Since 2010, a group of youth and adult community members from East Palo Alto have worked with the John W. Gardner Center (JGC) and an anonymous funder to determine if people in East Palo Alto want and need a community-based Arts, Music and Cultural Center. Staff and members of local organizations including Live in Peace (LIP), the Mural Music & Arts Project (MMAP), and Youth United for Community Action (YUCA) serve as core planning team members. Youth leaders from the team have conducted two rounds of data collection and community engagement for the purpose of learning about local interests, needs, potential locations, and political and socialwill for the project.</p>
 
 <br>
 
