--- a/resources/content-journals.html
+++ b/resources/content-journals.html
@@ -36,6 +36,8 @@
 <p>Kirshner, B. <span class="content-italic">Guided Participation in Youth Activism.</span> Journal of Learning Sciences.</p>
 <br>
  
+<p>Anyon, Y. & Fernández M. (Fall 2007). <a href="http://www.changemag.org/Archives/Back%20Issues/November-December%202007/abstract-potential-community.html"><span class="content-italic">Realizing the Potential of Community-University Partnerships.</span></a> Change, The Magazine of Higher Learning, November/December 2007.</p>
+<br>
 
 <p>Osberg-Conner, J. H. and Strobel, K. R. (2007). <a href="/resources/journals/Conner_JA_Leadership Development An Examination of Individual and Programmatic Growth_2007_Final.pdf"><span class="content-italic">Leadership Development: An Examination of Individual and Programmatic Growth.</span></a> Journal of Adolescent Research 22:275-297.</p>
 <br>
