--- a/about_jgc/content-directions.html
+++ b/about_jgc/content-directions.html
@@ -4,70 +4,77 @@
 
         <div class="jgc-content-feature-item-left">
 
-<h1 class="content-text-header">John W. Gardner Center for Youth and Their Communities (JGC)</h1>
-		Stanford University School of Education<br>
-		505 Lasuen Mall<br>
-		Stanford, CA 94305-3083<br>
-		<br>
+<h1 class="title-page-header-big">Directions & Parking</h1><br>
 
-    		<h1 class="content-text-header">Directions to the John W. Gardner Center at Stanford University's Barnum Center</h1>
-	
-			<br>
-			<span class="content-bold">From I-280</span><br>
-			Take 280 to the Page Mill Road Exit.<br>
-			Take the off ramp to Palo   Alto/Stanford.<br>
+<a href="#By Car">By Car</a> or <a href="#By Train">By Train</a><br>  
+<br>
+<h1 class="content-page-header">John W. Gardner Center for Youth and Their Communities (JGC)</h1>
+Stanford University School of Education<br>
+Barnum Center<br>
+505 Lasuen Mall<br>
+Stanford, CA 94305-3083<br>
+<br>
+The John W. Gardner Center is located in the Barnum Center, near the Stanford Bookstore and the School of Education.<br>
+<br>
 
-			Take Page Mill Road to Junipero Serra Boulevard.<br>
-			Turn left   at the stoplight onto Junipero Serra. <br>
-			Take Junipero Serra to Campus Drive   East.<br>
-			Turn right at the stoplight onto Campus Drive East.<br>
-			Take Campus   Drive to Mayfield Avenue. <br>
-			Turn left onto Mayfield. <br>
+<p>
+<iframe width="625" height="550" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps/ms?ie=UTF8&amp;source=embed&amp;hl=en&amp;ecpose=37.42310001,-122.16521818,141.43,-38.796,71.43,0&amp;msa=0&amp;msid=200448085129146576286.00048d6dea60ec24a6ab9&amp;t=m&amp;vpsrc=6&amp;ll=37.424298,-122.167196&amp;spn=0.005964,0.00912&amp;z=16&amp;output=embed"></iframe><br /><small>View <a href="http://maps.google.com/maps/ms?ie=UTF8&amp;source=embed&amp;hl=en&amp;ecpose=37.42310001,-122.16521818,141.43,-38.796,71.43,0&amp;msa=0&amp;msid=200448085129146576286.00048d6dea60ec24a6ab9&amp;t=m&amp;vpsrc=6&amp;ll=37.424298,-122.167196&amp;spn=0.005964,0.00912&amp;z=16" style="color:#0000FF;text-align:left">Stanford School of Education Buildings and Parking</a> in a larger map</small>
+</p>
+<br>
+<hr rule>
+<a name="By Car"></a> <h1 class="content-text-header">BY CAR</h1><br>
 
-			Follow Mayfield   around the sharp turn to the left. <br>
-			Turn right into the first parking lot   (metered) or the second parking lot (&ldquo;A&rdquo; permit) and park. Go towards center of   campus, pass Tresidder Union and Bookstore. <br>
-			Barnum  Center is between   the Bookstore and the School of Education. <br>
-			Enter through the main entrance   facing the School of Education, next to the clock tower. <br>
-			<br>
+<h1 class="content-text-header">Driving to the Stanford campus</h1>
+<br>
+<ul>
+<li><span class="content-underline">Parking Option 1:</span> The closest visitor parking is in the Tresidder Union lot, #L-39 (699 Lagunita Drive, Stanford, CA).</li>
+<li><span class="content-underline">Parking Option 2:</span> Alternate parking is available in Parking Structure #6 (560 Wilbur Way, Stanford, CA).</li>
+</ul>
+<br>
+<h1 class="content-bold">Google Directions</h1><br><script src="//www.gmodules.com/ig/ifr?url=http://hosting.gmodules.com/ig/gadgets/file/114281111391296844949/driving-directions.xml&amp;up_fromLocation=&amp;up_myLocations=699%20Lagunita%20Drive%2C%20Stanford%2C%20CA%20%7C%20560%20Wilbur%20Way%2C%20Stanford%2C%20CA&amp;up_defaultDirectionsType=&amp;up_autoExpand=&amp;synd=open&amp;w=320&amp;h=55&amp;brand=light&amp;lang=en&amp;country=US&amp;border=%23ffffff%7C3px%2C1px+solid+%23999999&amp;output=js"></script>
+<br>
 
-			<span class="content-bold">From Hwy   101</span><br>
-			Take 101 to the Embarcadero Road Exit. <br>
-			Take the off ramp to   Embarcadero Road West/Stanford. <br>
-			Take Embarcadero Road to El Camino Real. <br>
-			Continue straight at the stoplight onto Galvez Street.<br>
+<span class="content-underline">Parking Option 1: Tresidder Union lot, #L-39 (699 Lagunita Drive, Stanford, CA)</span><br>
 
-			Take Galvez to   Campus Drive East. <br>
-			Turn left at the stop sign onto Campus Drive East. <br>
-			Take Campus Drive to Mayfield Avenue. <br>
-			Turn right onto   Mayfield.<br>
-			Follow Mayfield around the sharp turn to the left. <br>
-			Turn right   into the first parking lot (metered) or the second parking lot (&ldquo;A&rdquo; permit) and   park. <br>
+<p>Metered and "Pay and Display" parking are available at the Tresidder Union parking lot for a cost of $1.50 per hour.  Parking meters require quarters and have a two-hour limit.  "Pay and Display" machines accept Visa or MasterCard, cash, or coins, but do not issue change.  Please be sure to place the "Pay and Display" receipt on your dashboard.  Parking is FREE after 4:00 pm and during weekends.</p>  
+<br>
 
-			Go towards center of campus, pass Tresidder Union and Bookstore. <br>
-			Barnum  Center is between the Bookstore and the School of Education. <br>
-			Enter through the main entrance facing the School of Education, next to the   clock tower.<br>
-			<br>
-	
-			<span class="content-bold">From East Bay</span><br>
-			Take 84 West (Dumbarton Bridge)   and turn left onto University Avenue.<br>
+<ul>
+<span class="content-italic">Walking from Tresidder Union parking lot to Barnum Center</span>
+<ol>
+<li>Head north toward the center of campus with Tresidder Union on your left and Dinkelspiel Auditorium on your right.</li>
+<li>Continue north on Lasuen Mall with the Old Union on your left and the Bookstore on your right.</li>
+<li>Barnum Center is on your right before reaching the Clock Tower at 505 Lasuen Mall.</li>
+</ol>
+</ul>
+<br>
 
-			University Avenue crosses El Camino   Real and becomes Palm Drive as it enters the university.<br>
-			Go through one   traffic light, and turn left onto Campus Drive (at the first stop   sign).<br>
-			Follow Campus Drive to Mayfield.<br>
-			Turn right onto   Mayfield.<br>
-			Follow Mayfield around the sharp turn to the left. <br>
-			Turn right   into the first parking lot (metered) or the second parking lot (&ldquo;A&rdquo; permit) and   park. <br>
+<span class="content-underline">Parking Option 2: Parking Structure #6 (560 Wilbur Way, Stanford, CA)</span><br>
+<p>"Pay By Space Number" parking is available in Parking Structure #6 for a cost of $1.50 per hour. Park in a "Visitor Pay Parking" numbered spot (1-41 and 51-73). The "Pay By Space Number" machines accept Visa or MasterCard, cash, or coins, but do not issue change. You do not need to display your receipt. Parking is FREE after 4:00 pm and during weekends.</p><br>
 
-			Go towards center of campus, pass Tresidder Union and Bookstore. <br>
-			Barnum  Center is between the Bookstore and the School of Education. <br>
-			Enter through the main entrance facing the School of Education, next to the   clock tower.<br>
-			<br>
-			<h1 class="content-text-header">Parking</h1>
-			<br>
-			<span class="content-bold">Weekday Parking</span><br> Metered and   &quot;Pay and Display&quot; parking may be available at the Tresidder Union parking lot.   The cost is $1.50 per hour. 				Parking meters require quarters; &quot;Pay and Display&quot;   machines accept credit cards, cash, or coins, but do not issue change. Please be   sure to place the &quot;Pay and 				Display&quot; receipt on the dashboard.<br>
+<ul>
+<span class="content-italic">Walking from Parking Structure #6 to Barnum Center</span> <br>
+<ol>
+<li>Exit the parking structure and turn left on Bowdoin Lane.</li>
+<li>Cross Galvez Street and continue between the Law School (on your left) and CERAS (on your right).</li>  
+<li>	Head diagonally across Canfield Court toward the Clock Tower, keeping the Bookstore to your left.</li>
+<li>Enter through the back entrance of Barnum Center and walk through the building to JGC.</li>
+</ol>
+</ul>
 
-			<br>
-			<span class="content-bold">Weekend   and Evening (after 4 p.m.) Parking</span><br>Weekend   and evening (after 4 p.m.) parking is available in the lot on the left on   Abbot Way or in the lot on the right of Alvarado Row. No parking 				permit is   required on weekends. Permit parking around CERAS is enforced on weekdays during   business hours.
+<hr rule>
+<a name="By Train"></a> <h1 class="content-text-header">BY TRAIN</h1><br>
+<h1 class="content-text-header">Taking Caltrain to Stanford</h1>
+From the Palo Alto Caltrain stop, free Marguerite shuttles will take you to campus.  Take the Palm Drive shuttle (Line P) and get off at the Oval.<br>
+ <br>
+Walking to Barnum Center from the Oval<br>
+<ul>
+<li>Face the Main Quad.
+<li>	Turn left and walk down Serra Mall.</li>
+<li>	Turn right on Lasuen Mall and walk the length of the Main Quad.</li>
+<li>	Pass the School of Education (Cubberley) and the Clock Tower on your left.</li>
+<li>	Barnum Center is on your left at 505 Lasuen Mall.</li>
+</ul>
 
          </div>
 
