--- a/about_jgc/team_bios/content-karen.html
+++ b/about_jgc/team_bios/content-karen.html
@@ -6,7 +6,10 @@
            <h1 class="content-text-header">Karen Strobel</h1>
            <span class="content-bold">Senior Research Associate</span><br>
 	   <br>
-	  <p>Karen Strobel is a Research Associate at the JGC studying youth's developmental outcomes in school and out-of-school contexts. Her work primarily draws on a social-cognitive model of motivation to study successful pathways among low-income, early adolescents. Karen's research at the JGC began with the experiences of youth involved in the YELL program in Redwood City and West Oakland. Currently, she is studying middle school students' motivational beliefs and perceptions of their classroom contexts. She is studying parallel questions in after school settings and summer learning programs locally as well as on the East Coast. </p>
+<p>
+<img class="bio-std" src="/images/team/KStrobel_sm.jpg">
+Karen Strobel is a Research Associate at the JGC studying youth's developmental outcomes in school and out-of-school contexts. Her work primarily draws on a social-cognitive model of motivation to study successful pathways among low-income, early adolescents. Karen's research at the JGC began with the experiences of youth involved in the YELL program in Redwood City and West Oakland. Currently, she is studying middle school students' motivational beliefs and perceptions of their classroom contexts. She is studying parallel questions in after school settings and summer learning programs locally as well as on the East Coast. 
+</p>
 <br>
 <p>Karen received her B.A. from the University of Michigan where she designed her major to study education from both a sociological and a psychological perspective. She earned her Ph.D. in Education from Stanford with a concentration in Child and Adolescent Development. Prior to her doctoral program, Karen worked as a teacher and then a Center Director with the Higher Achievement Program, an educational enrichment program for low-income youth in Washington D.C.</p> 
 
