--- a/about_jgc/team_bios/content-kristin.html
+++ b/about_jgc/team_bios/content-kristin.html
@@ -7,7 +7,11 @@
 <h1 class="content-text-header">Kristin Geiser</h1>
            <span class="content-bold">Social Science Research Associate </span><br>
        <br>
-      <p>Kristin Geiser is a Social Science Research Associate who works alongside many of our community partners to conduct qualitative research that informs and improves their practice and adds value to the larger field of youth development. Prior to joining JGC, Kristin served as the Associate Director for Stanford’s Teacher Education Program (Elementary), the Director of Advanced Studies at Notre Dame de Namur University, and a school reform/equity coach with the Bay Area Coalition of Essential Schools (National Equity Project). In each of these roles, she integrated thoughtful scholarship and community-based efforts to pursue social justice in the context of schools and communities. Kristin graduated from UCLA with a B.A. in Theater, Film, and Television and a Ph.D. in Educational Curriculum, Teaching Studies, Administration, and Policy.</p>
+<p>
+
+<img class="bio-std" src="/images/team/KGeiser.jpg">
+Kristin Geiser is a Social Science Research Associate who works alongside many of our community partners to conduct qualitative research that informs and improves their practice and adds value to the larger field of youth development. Prior to joining JGC, Kristin served as the Associate Director for Stanford’s Teacher Education Program (Elementary), the Director of Advanced Studies at Notre Dame de Namur University, and a school reform/equity coach with the Bay Area Coalition of Essential Schools (National Equity Project). In each of these roles, she integrated thoughtful scholarship and community-based efforts to pursue social justice in the context of schools and communities. Kristin graduated from UCLA with a B.A. in Theater, Film, and Television and a Ph.D. in Educational Curriculum, Teaching Studies, Administration, and Policy.
+</p>
          </div>
 
        </div>
