--- a/about_jgc/team_bios/content-marianne.html
+++ b/about_jgc/team_bios/content-marianne.html
@@ -6,7 +6,10 @@
     <h1 class="content-text-header">Marianne Chatterton</h1>
 <span class="content-bold">Finance Manager</span><br>
 <br>
-<p>Marianne Chatterton joined the John W. Gardner Center in August 2010. Marianne serves as the center's primary financial officer, overseeing grants, contracts, gifts, and operating funds. Prior to joining JGC, she was a contracts and grants analyst in UC Davis' Sponsored Programs Office. Marianne's professional experience includes non-profit management, education, the arts, and agriculture.</p>
+<p>
+<img class="bio-std" src="/images/team/MChatterton.jpg">
+Marianne Chatterton joined the John W. Gardner Center in August 2010. Marianne serves as the center's primary financial officer, overseeing grants, contracts, gifts, and operating funds. Prior to joining JGC, she was a contracts and grants analyst in UC Davis' Sponsored Programs Office. Marianne's professional experience includes non-profit management, education, the arts, and agriculture.
+</p>
 <br>
 <p>Marianne holds a BA in music and an MBA in general management, both from UC Davis. She has performed nationally as a percussionist with symphony orchestras, marching bands, and competitive drum and bugle corps.</p> 
          </div>
