--- a/content-footer.html
+++ b/content-footer.html
@@ -4,8 +4,12 @@
                  <div class="footer_top">
                    <ul class="plugins">
                      <li class=plugin>
-                        <a href="http://www.twitter.com/gardnercenter">
+                        <a title="Follow JGC on Twitter" href="http://www.twitter.com/gardnercenter">
                           <img src="/images/index/follow_on_twitter.png"></a>
+                     </li>
+                     <li class=plugin>
+                        <a title="Offical JGC Blog" href="http://gardnercenter.wordpress.com">
+                          <img width="20px" src="/images/icons/wordpress-logo-32-blue.png"></a>
                      </li>
                      <li class=plugin>
                         <g:plusone size="medium" annotation="none"></g:plusone>
@@ -23,7 +27,7 @@
                  
                  <div class="footer">
                    <span class="left_footer_text"> 
-                   Copyright &copy 2012 John W Gardner Center at Stanford University. All rights reserved.<br>Home page art by <a href="http://www.muralmusicarts.org">muralmusicarts.org</a>, lead artist Omar Ramirez</span> 
+                   Copyright &copy 2012 John W. Gardner Center at Stanford University. All rights reserved.<br>Home page art by <a href="http://www.muralmusicarts.org">muralmusicarts.org</a>, lead artist Omar Ramirez</span> 
                    <ul class="piped">
                      <li class="footer"><a href="http://stanford.edu/site/terms.html" target="_blank" id="first" class="footer">Terms of use</a></li>
                      <li class="footer"><a href="https://pgnet22.stanford.edu/giving/part/common/privacy.html" target="_blank" class="footer">Privacy policy</a></li>
