--- a/index.html
+++ b/index.html
@@ -120,9 +120,13 @@ document.createElement("article" );
 				<div class="feature_text">
 					<p>
 						<ul class="news">
-              <li>January 27: Founding Director Milbrey McLaughlin presents at Bay Area <a class="link-homepage-feature" href="http://learninginafterschool.org/howkidslearn/wp/">Conference on How Kids Learn</a></li>
-              <li>March 8:  Senior Policy Analyst Oded Gurantz presents at the <a class="link-homepage-feature" href="http://cepa.stanford.edu/ecology/workshops">Postsecondary Ecology Workshop 2012 </a> at Stanford</li>
+              <li>January 27: Milbrey McLaughlin presents <a class="link-homepage-feature" href="http://learninginafterschool.org/howkidslearn/wp/">Conference on How Kids Learn</a></li>
+              <li>February 7:  Milbrey McLaughlin presents <a class="link-homepage-feature" href="http://ed.stanford.edu/events/partnering-districts-research-matters">Partnering with Districts for Research that Matters</a> </li>
+
+
 						</ul>
+                                        <a class="link-homepage-feature-right" href="/news/news.html">More Events</a>
+
 					</p>
 				</div>
 			</div>
