--- a/our_work/content-yell.html
+++ b/our_work/content-yell.html
@@ -14,6 +14,10 @@
 <ul>
 <li>Understanding Youth Leadership Development: An examination of the Youth Engaged in Leadership and Learning Program (<a href="/resources/publications/JGC_IB_YELLYouthLeadershipDevelopment2007.pdf" class="link-no-underline">Issue Brief</a>)</li>
 <br>
+
+
+<li>Realizing the Potential of Community-University Partnerships (<a href="http://www.changemag.org/Archives/Back%20Issues/November-December%202007/abstract-potential-community.html">Magazine Article</a>)</li>
+<br>
 <li>A Model for Fostering Youth Leadership: The Youth Engaged in Leadership and Learning Program (<a href="/resources/publications/JGC_IB_YELLYouthLeadershipModel2007.pdf"class="link-no-underline">Issue Brief</a>)</li>
 <br>
 <li>Building Bridges: A Summer Program for Middle School Students Highlights a Community School in Action (<a href="/resources/publications/JGC_IB_SummerProgramCommunitySchool2007.pdf" class="link-no-underline">Issue Brief</a>)</li>
@@ -25,6 +29,8 @@
 <li>Creating Community change: Challenges and Tensions in Community Youth Research (<a href="/resources/publications/JGC_IB_CommunityYouthResearch2002.pdf" class="link-no-underline">Issue Brief</a>)</li>
 <br>
 <li><a href="/our_work/yell/YCE Annotated Bibliography_JennO1.pdf">Youth Civic Engagement - Annotated Bibliography</a></li>
+
+
 
 </ul>
 <br>
